# fame-ai

./: .env.template  .gitignore  pyproject.toml  readme.md
examples/: basic_usage.py  elon_musk_example.py  face.py  personality_face_swap_example.py  photo_tweet_example.py  physics_professor_example.py  physics_professor_schedule.json  physics_text_tweet_example.py  schedule_draft_example.py  startup_founder_example.py
fame/: agent.py
fame/config/: openrouter_models.py
fame/core/: facets_of_personality.py  mood_and_emotions.py
fame/integrations/: openrouter_integration.py  replicate_integration.py  twitter_integration.py
fame/utils/: tweet_validator.py
scripts/: build_and_publish.py
