[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fame-ai"
version = "0.1.0"
authors = [
  { name="FAME", email="dev@getfame.ai" },
]
description = "A framework for creating AI-powered agents with distinct personalities and abilities"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "tweepy>=4.10.0",
    "textblob>=0.15.3",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2",
    "replicate>=0.8.0",
    "apscheduler>=3.9.1",
    "python-dotenv>=0.19.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/fame-agent"
Issues = "https://github.com/yourusername/fame-agent/issues" 